--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "afterglow"
-version = "0.1.0-beta"
-description = ""
+version = "0.1.0-dev0"
+description = "A configuration tool for ignition based systems"
 authors = ["James <james@dataligand.com>"]
 readme = "README.md"
 packages = [{include = "afterglow"}]
@@ -18,4 +18,5 @@ toml = "^0.10.2"
 
 [build-system]
 requires = ["poetry-core"]
+
 build-backend = "poetry.core.masonry.api"
