--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ structlog = "^23.1.0"
 
 [tool.poetry.group.dev.dependencies]
 toml = "^0.10.2"
+pytest = "^7.4.0"
 
 [build-system]
 requires = ["poetry-core"]
